tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_tests_flags_r.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - tests
    - "-r"
---
success: true
exit_code: 0
----- stdout -----
crate::::*

----- stderr -----
