tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_tests_flags_r_t_e_G.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - tests
    - "-r"
    - "-t"
    - "-e"
    - "-G"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Module 'tests' not found
